--- a/problem-a/index.html
+++ b/problem-a/index.html
@@ -19,24 +19,28 @@
     <i class="d-none fa fa-spinner fa-spin" aria-hidden="true"></i>
   </h1>
 
-  <!-- The search form -->
-  <form class="form-inline" method="GET" action="https://itunes.apple.com/search">
-    <div class="form-group mr-3">
-      <label for="searchQuery" class="mr-2">What do you want to hear?</label>
-      <input type="text" name="term" id="searchQuery" class="form-control">
-    </div>
-    <button type="submit" class="btn btn-primary">
-      <i class="fa fa-music" aria-hidden="true"></i> Search!
-    </button>
-    <input type="hidden" name="entity" value="song"> <!-- extra form param -->
-  </form>
+  <!-- search form -->
+  <div class="container">
+    <form class="form-inline" method="GET" action="https://itunes.apple.com/search">
+      <div class="form-group mr-3">
+        <label for="searchQuery" class="mr-2">What do you want to hear?</label>
+        <input type="text" name="term" id="searchQuery" class="form-control">
+      </div>
+      <button type="submit" class="btn btn-primary">
+        <i class="fa fa-music" aria-hidden="true"></i> Search!
+      </button>
+      <input type="hidden" name="entity" value="song"> <!-- extra form param -->
+    </form>
+  </div>
 
-  <!-- Results to show -->
+  <!-- Results -->
   <div id="records">
     <!-- data will be added here -->
   </div>
-
   <!-- Load JavaScript libraries here -->
   <script src="js/index.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/2.0.4/fetch.min.js" integrity="sha512-IsoGB9P1Kjw962zrslxT91OfoKkAnlBfQDdh5HwFvOxwJ8xGV6MuDeAli4TkEMiUqhJVkvpxJBsIS14bSERgxA==" crossorigin="anonymous"></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/es6-promise/4.2.8/es6-promise.min.js" integrity="sha512-JMK7ImCd/9VxQM7FWvAT3njqo5iGKkWcOax6Bwzuq48xxFd7/jekKcgN+59ZRwBoEpZvv6Jkwh3fDGrBVWX5vA==" crossorigin="anonymous"></script>
 </body>
 </html>
